--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                   <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#product">Product</a>
+                  <a class="nav-link" href="#shoes">Shoes</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#about-us">About Us</a>
+                  <a class="nav-link" href="#backpack">Backpack</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#contact-us">Contact Us</a>
+                  <a class="nav-link" href="#subscribe">Subscribe</a>
                 </li>
               </ul>
             </div>
@@ -42,20 +42,20 @@
     <div class="container">
         <div id="carouselExampleSlidesOnly" class="carousel slide slide-bg" data-ride="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                  <div class="row align-items-center">
-                      <div class="col-md-7">
+                <div class="carousel-item active">
+                    <div class="row align-items-center">
+                        <div class="col-md-7">
                           <h1>Mi LED TV 4A PRO 32</h1>
                           <p>This is the best LED TV in the world for people who just want to wast time infront of tv for funky people.Contrary to popular belief, Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel id dolor at autem!</p>
                           <h1 class="price">$1289</h1>
-                          <button class="buy-now-btn">BUY NOW</button>
-                      </div>
-                      <div class="col-md-5">
+                          <button class="buy-now-btn">BUY NOW >></button>
+                        </div>
+                        <div class="col-md-5">
                         <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
-                      </div>
-                  </div>
-              </div>
-              <div class="carousel-item">
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
                 <div class="row align-items-center">
                     <div class="col-md-7">
                         <h1>Cool Dud Headphone</h1>
@@ -67,12 +67,12 @@
                         <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
                     </div>
                 </div>
-              </div>
-              <div class="carousel-item">
+                </div>
+                <div class="carousel-item">
                 <div class="row align-items-center">
                     <div class="col-md-7">
                         <h1>X-Box for your living room</h1>
-                          <p>This is the world best X-box for people who just want to wast time ti hearing fake news.Contrary to popular belief, Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel id dolor at autem!</p>
+                          <p>This is the world best X-box for people who just want to wast time to hearing fake news.Contrary to popular belief, Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel id dolor at autem!</p>
                           <h1 class="price">$820</h1>
                           <button class="buy-now-btn">BUY NOW</button>
                     </div>
@@ -85,6 +85,121 @@
           </div>
     </div>    
 
+    <!-- item categories -->
+    <div class="container categories">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="cate-1 d-flex justify-content-between align-items-center">
+                    <h1>Watch</h1>
+                <img src="images/categories/watch.png" alt="">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="cate-2 d-flex justify-content-between align-items-center">
+                    <h1>Bag</h1>
+                <img src="images/categories/bag.png" alt="">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="cate-3 d-flex justify-content-between align-items-center">
+                    <h1>Shoes</h1>
+                <img src="images/categories/shoes.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Shoes -->
+    <div class="container shoes" id="shoes">
+        <h3>Shoes</h3>
+        <div class="card-deck">
+            <div class="card">
+              <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Reebok Dart Men’s Shoes</h5>
+                <p class="card-text">Some quick example text to build on
+                    the card title.</p>
+                <h5>$120</h5>
+                <button class="buy-now-btn">BUY NOW >></button>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Reebok Pump</h5>
+                <p class="card-text">Some quick example text to build on
+                    the card title.</p>
+                    <h5>$320</h5>
+                <button class="buy-now-btn">BUY NOW >></button>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Reebok All Terrain</h5>
+                <p class="card-text">Some quick example text to build on
+                    the card title.</p>
+                    <h5>$350</h5>
+                    <button class="buy-now-btn">BUY NOW >></button>
+              </div>
+            </div>
+          </div>
+    </div>
+
+<!-- Backpack or Bags Categories -->
+    <div class="container backpack" id="backpack">
+        <h3>Backpack</h3>
+        <div class="card-deck">
+            <div class="card">
+              <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Ison Backpack</h5>
+                <h5>$120</h5>
+                <p class="card-text">Same quick Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt laudantium voluptate aperiam.</p>
+              </div>
+              <div class="card-footer">
+                <button class="buy-now-btn">BUY NOW >></button>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Biowang Backpack</h5>
+                <h5>$300</h5>
+                <p class="card-text">Same quick Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt laudantium voluptate aperiam.</p>
+              </div>
+              <div class="card-footer">
+                <button class="buy-now-btn">BUY NOW >></button>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Dxyizu WS54 Smart</h5>
+                <h5>$320</h5>
+                <p class="card-text">This is a wider same quick Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt laudantium voluptate aperiam. Lorem ipsum dolor sit amet.</p>
+              </div>
+              <div class="card-footer">
+                <button class="buy-now-btn">BUY NOW >></button>
+              </div>
+            </div>
+          </div>
+    </div>
+
+    <!-- Subscribe -->
+    <div class="container subscribe d-flex justify-content-center align-items-center" id="subscribe">
+        <div>
+            <h3 class="text-center">Let's Stay In</h3>
+            <p>Get updates on sales special and more.</p>
+            <input class="form-control" placeholder="Enter Your Email">
+            <button class="buy-now-btn mt-1"> Submit</button>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer>
+        <small>&copy;2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small>
+    </footer>
 
 
 
